# YPLite

./: README.md  local.properties  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/yplite/ai/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native.cpp
app/src/main/java/com/yplite/ai/: AppCompatPreferenceActivity.java  BoundingBox.java  Constants.java  Detector.java  MainActivity.java  OCRPredictorNative.java  OcrResultModel.java  OverlayView.java  Predictor.java  SettingsActivity.java  Utils.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/menu/: menu_action_options.xml
app/src/main/res/values/: arrays.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/yplite/ai/: ExampleUnitTest.java
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
